# xmlgui

./: .gitignore  CMakeLists.txt  LICENSE.txt
cmake/: FindScopeGuard.cmake  Findgl3w.cmake  Findimgui.cmake  Findimgui_node_editor.cmake  Findstb_image.cmake
example/: schema.xsd  test.xml
src/: CMakeLists.txt  app.cpp  builders.cpp  builders.h  drawing.cpp  drawing.h  node.cpp  node.h  widgets.cpp  widgets.h
src/node_application/: CMakeLists.txt  application.cpp  imgui_extra_keys.h  renderer_ogl3.cpp
src/utils/: text.hpp
src/xml/: xml_reader.cpp  xml_reader.h  xsd_handler.cpp  xsd_handler.h  xsd_reader.cpp  xsd_reader.h
