add_subdirectory(node_application)

add_example_executable(app
    node.h
    node.cpp
    app.cpp
    builders.h
    builders.cpp
    drawing.h
    drawing.cpp
    widgets.h
    widgets.cpp
    xml/xml_reader.h
    xml/xml_reader.cpp
    xml/xsd_reader.h
    xml/xsd_reader.cpp
    xml/xsd_handler.h
    xml/xsd_handler.cpp
    utils/text.hpp
)
